@@ -12,6 +12,10 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[{Makefile,**.mk}]
+# Use tabs for indentation (Makefiles require tabs)
+indent_style = tab
+
 [*.{diff,md}]
 trim_trailing_whitespace = false
 insert_final_newline = false
