@@ -1,16 +1,16 @@
-resource "aws_s3_bucket_ownership_controls" "bucket" {
-  bucket = aws_s3_bucket.bucket.id
+resource "aws_s3_bucket_ownership_controls" "this" {
+  bucket = aws_s3_bucket.this.id
   rule {
     object_ownership = "BucketOwnerPreferred"
   }
 }
 
-resource "aws_s3_bucket_acl" "example" {
+resource "aws_s3_bucket_acl" "this" {
   depends_on = [
-    aws_s3_bucket_ownership_controls.bucket,
-    aws_s3_bucket_public_access_block.public_access,
+    aws_s3_bucket_ownership_controls.this,
+    aws_s3_bucket_public_access_block.this,
   ]
 
-  bucket = aws_s3_bucket.bucket.id
+  bucket = aws_s3_bucket.this.id
   acl    = "public-read"
 }
