@@ -1,15 +1,21 @@
-output "s3_bucket_id" {
-  value       = aws_s3_bucket.bucket.id
-  description = "The id of the bucket hosting the site files."
+output "bucket_id" {
+  value       = aws_s3_bucket.this.id
+  description = "Name of the bucket"
 }
 
-output "s3_bucket_arn" {
-  value       = aws_s3_bucket.bucket.arn
-  description = "The ARN of the bucket hosting the site files."
+output "bucket_arn" {
+  value       = aws_s3_bucket.this.arn
+  description = "ARN of the bucket. Will be of format arn:aws:s3:::bucketname"
   sensitive = true
 }
-output "s3_bucket_regional_domain_name" {
-  value       = aws_s3_bucket.bucket.bucket_regional_domain_name
+
+output "bucket_domain_name" {
+  value       = aws_s3_bucket.this.bucket_regional_domain_name
   description = "S3 bucket regional domain name."
   sensitive = false
+}
+
+output "hosted_zone_id" {
+  value = aws_s3_bucket.this.hosted_zone_id
+  description = "Route 53 Hosted Zone ID for this bucket's region"
 }
