@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Name of project on the license
 - Better description in the README.md file
 - Modified outputs for the CDN in the s3 website package
+- Renamed s3 modules objects from `bucket` to `this`
 
 ### Removed
 - `certificates` folder as it was moved into
